// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalRow /> should render proposal displayed 1`] = `
<Collapse
  appear={false}
  dimension="height"
  getDimensionValue={[Function]}
  id="collapse-proposal-proposal1"
  in={true}
  mountOnEnter={false}
  timeout={300}
  unmountOnExit={false}
>
  <ListGroupItem
    bsClass="list-group-item"
    id="item-proposal-proposal1"
    listItem={false}
  >
    <h4>
      <a
        className="profile__proposal__open__link"
        href="http://perdu.com"
        id="item-proposal-link-proposal1"
        title="perdu sur internet ?"
      >
        perdu sur internet ?
      </a>
    </h4>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      disabled={false}
      id="profile-proposal-unfollow-button-proposal1"
      onClick={[Function]}
    >
      <FormattedMessage
        id="unfollow"
        values={Object {}}
      />
    </Button>
  </ListGroupItem>
</Collapse>
`;

exports[`<ProposalRow /> should render proposal hidden 1`] = `
<Collapse
  appear={false}
  dimension="height"
  getDimensionValue={[Function]}
  id="collapse-proposal-proposal1"
  in={false}
  mountOnEnter={false}
  timeout={300}
  unmountOnExit={false}
>
  <ListGroupItem
    bsClass="list-group-item"
    id="item-proposal-proposal1"
    listItem={false}
  >
    <h4>
      <a
        className="profile__proposal__open__link"
        href="http://perdu.com"
        id="item-proposal-link-proposal1"
        title="perdu sur internet ?"
      >
        perdu sur internet ?
      </a>
    </h4>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      disabled={false}
      id="profile-proposal-unfollow-button-proposal1"
      onClick={[Function]}
    >
      <FormattedMessage
        id="unfollow"
        values={Object {}}
      />
    </Button>
  </ListGroupItem>
</Collapse>
`;
